RoleProvider düzenlendi. Admin login sorunu giderildi. _AdminLayout düzenlendi.

--- a/FlatLabProjectWebApplication/Web.config
+++ b/FlatLabProjectWebApplication/Web.config
@@ -24,10 +24,9 @@
 		<authentication mode="Forms">
 			<forms loginUrl="~/Login/Index" timeout="720"></forms>
 		</authentication>
-		<roleManager enabled="true" defaultProvider="PersonnelRoleProvider" cookieTimeout="20">
+		<roleManager enabled="true" defaultProvider="LoginRoleProvider" cookieTimeout="20">
 			<providers>
-				<add name="AdminRoleProvider" type="FlatLabProjectWebApplication.Roles.AdminRoleProvider"/>
-				<add name="PersonnelRoleProvider" type="FlatLabProjectWebApplication.Roles.PersonnelRoleProvider"/>
+				<add name="LoginRoleProvider" type="FlatLabProjectWebApplication.Roles.LoginRoleProvider"/>
 			</providers>
 		</roleManager>
 	</system.web>
