--- a/FlatLabProjectWebApplication/FlatLabProjectWebApplication.csproj
+++ b/FlatLabProjectWebApplication/FlatLabProjectWebApplication.csproj
@@ -149,9 +149,7 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Roles\PersonnelRoleProvider.cs" />
-    <Compile Include="Roles\AdminRoleProvider.cs" />
-    <Compile Include="Roles\ManagerRoleProvider.cs" />
+    <Compile Include="Roles\LoginRoleProvider.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap-theme.css" />
