--- a/BusinessLayer/packages.config
+++ b/BusinessLayer/packages.config
@@ -2,6 +2,10 @@
 <packages>
   <package id="EntityFramework" version="6.4.4" targetFramework="net461" />
   <package id="FluentValidation" version="11.1.0" targetFramework="net461" />
+  <package id="Microsoft.AspNet.Mvc" version="5.2.7" targetFramework="net461" />
+  <package id="Microsoft.AspNet.Razor" version="3.2.7" targetFramework="net461" />
+  <package id="Microsoft.AspNet.WebPages" version="3.2.7" targetFramework="net461" />
+  <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net461" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net461" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.2" targetFramework="net461" />
 </packages>
