--- a/FlatLabProjectWebApplication/Web.config
+++ b/FlatLabProjectWebApplication/Web.config
@@ -24,7 +24,7 @@
 		<authentication mode="Forms">
 			<forms loginUrl="~/Login/Index" timeout="720"></forms>
 		</authentication>
-		<roleManager enabled="true" defaultProvider="LoginRoleProvider" cookieTimeout="20">
+		<roleManager enabled="true" defaultProvider="LoginRoleProvider" cookieTimeout="20" cacheRolesInCookie="true">
 			<providers>
 				<add name="LoginRoleProvider" type="FlatLabProjectWebApplication.Roles.LoginRoleProvider" />
 			</providers>
