--- a/DataAccessLayer/DataAccessLayer.csproj
+++ b/DataAccessLayer/DataAccessLayer.csproj
@@ -118,6 +118,10 @@
     <Compile Include="Migrations\202208030410504_TableUpdate2.designer.cs">
       <DependentUpon>202208030410504_TableUpdate2.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202208050322591_JobsTableCreationDateAdded.cs" />
+    <Compile Include="Migrations\202208050322591_JobsTableCreationDateAdded.designer.cs">
+      <DependentUpon>202208050322591_JobsTableCreationDateAdded.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -170,6 +174,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202208030410504_TableUpdate2.resx">
       <DependentUpon>202208030410504_TableUpdate2.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202208050322591_JobsTableCreationDateAdded.resx">
+      <DependentUpon>202208050322591_JobsTableCreationDateAdded.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
