--- a/FlatLabProjectWebApplication/FlatLabProjectWebApplication.csproj
+++ b/FlatLabProjectWebApplication/FlatLabProjectWebApplication.csproj
@@ -52,7 +52,7 @@
       <HintPath>..\packages\EntityFramework.6.4.4\lib\net45\EntityFramework.SqlServer.dll</HintPath>
     </Reference>
     <Reference Include="FluentValidation, Version=11.0.0.0, Culture=neutral, PublicKeyToken=7de548da2fbae0f0, processorArchitecture=MSIL">
-      <HintPath>..\packages\FluentValidation.11.1.0\lib\netstandard2.0\FluentValidation.dll</HintPath>
+      <HintPath>..\packages\FluentValidation.11.1.1\lib\netstandard2.0\FluentValidation.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=3.6.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.3.6.0\lib\net45\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.dll</HintPath>
@@ -137,6 +137,7 @@
     <Compile Include="Controllers\JobController.cs" />
     <Compile Include="Controllers\NotificationsController.cs" />
     <Compile Include="Controllers\PersonnelController.cs" />
+    <Compile Include="Controllers\TestController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -403,6 +404,8 @@
     <Content Include="flatlab-master\js\jquery.steps.min.js" />
     <Content Include="flatlab-master\js\jquery.stepy.js" />
     <Content Include="flatlab-master\js\jquery.tagsinput.js" />
+    <Content Include="flatlab-master\js\jquery.timeago.tr-short.js" />
+    <Content Include="flatlab-master\js\jquery.timeago.tr.js" />
     <Content Include="flatlab-master\js\jquery.ui.touch-punch.min.js" />
     <Content Include="flatlab-master\js\jquery.validate.min.js" />
     <Content Include="flatlab-master\js\modernizr.custom.js" />
@@ -501,6 +504,7 @@
     <Content Include="Scripts\jquery-3.6.0.slim.js" />
     <Content Include="Scripts\jquery-3.6.0.slim.min.js" />
     <None Include="Scripts\jquery.validate-vsdoc.js" />
+    <Content Include="Scripts\jquery.timeago.js" />
     <Content Include="Scripts\jquery.validate.js" />
     <Content Include="Scripts\jquery.validate.min.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
@@ -547,6 +551,7 @@
     <Content Include="Views\Manager\Index.cshtml" />
     <Content Include="Views\Mail\SearchMail.cshtml" />
     <Content Include="Views\Shared\Notification.cshtml" />
+    <Content Include="Views\Test\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
