--- a/FlatLabProjectWebApplication/MvcUI.csproj
+++ b/FlatLabProjectWebApplication/MvcUI.csproj
@@ -54,6 +54,12 @@
     <Reference Include="FluentValidation, Version=11.0.0.0, Culture=neutral, PublicKeyToken=7de548da2fbae0f0, processorArchitecture=MSIL">
       <HintPath>..\packages\FluentValidation.11.2.0\lib\netstandard2.0\FluentValidation.dll</HintPath>
     </Reference>
+    <Reference Include="Microsoft.AspNet.Identity.Core, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.AspNet.Identity.Core.2.2.3\lib\net45\Microsoft.AspNet.Identity.Core.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.AspNet.Identity.EntityFramework, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.AspNet.Identity.EntityFramework.2.2.3\lib\net45\Microsoft.AspNet.Identity.EntityFramework.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=3.6.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.3.6.0\lib\net45\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.dll</HintPath>
     </Reference>
@@ -126,17 +132,17 @@
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
-    <Compile Include="Controllers\AdminController.cs" />
-    <Compile Include="Controllers\ManagerController.cs" />
+    <Compile Include="Areas\Admin\AdminAreaRegistration.cs" />
+    <Compile Include="Areas\Admin\Controllers\ManagerController.cs" />
     <Compile Include="Controllers\ManagerJobController.cs" />
-    <Compile Include="Controllers\CompanyController.cs" />
+    <Compile Include="Areas\Admin\Controllers\CompanyController.cs" />
     <Compile Include="Controllers\ErrorPagesController.cs" />
     <Compile Include="Controllers\LoginController.cs" />
     <Compile Include="Controllers\MailController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\JobController.cs" />
     <Compile Include="Controllers\NotificationsController.cs" />
-    <Compile Include="Controllers\PersonnelController.cs" />
+    <Compile Include="Areas\Admin\Controllers\PersonnelController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -344,6 +350,7 @@
     <Content Include="flatlab-master\img\mega_icon3.png" />
     <Content Include="flatlab-master\img\mega_icon4.png" />
     <Content Include="flatlab-master\img\nav-expand.png" />
+    <Content Include="flatlab-master\img\photos\default.png" />
     <Content Include="flatlab-master\img\photos\user1.png" />
     <Content Include="flatlab-master\img\photos\user2.png" />
     <Content Include="flatlab-master\img\photos\user3.png" />
@@ -493,6 +500,8 @@
     <Content Include="Content\bootstrap-grid.rtl.css.map" />
     <Content Include="Content\bootstrap-grid.min.css.map" />
     <Content Include="Content\bootstrap-grid.css.map" />
+    <Content Include="Areas\Admin\Views\web.config" />
+    <Content Include="libman.json" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -520,23 +529,21 @@
     <Content Include="Views\Web.config" />
     <Content Include="Views\_ViewStart.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
-    <Content Include="Views\Home\About.cshtml" />
     <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Job\Index.cshtml" />
     <Content Include="Views\Job\GetJobList.cshtml" />
     <Content Include="Views\Job\AddJob.cshtml" />
-    <Content Include="Views\Shared\_AdminLayout.cshtml" />
+    <Content Include="Areas\Admin\Views\Shared\_AdminLayout.cshtml" />
     <Content Include="Views\ManagerJob\Index.cshtml" />
     <Content Include="Views\ManagerJob\AddJob.cshtml" />
     <Content Include="Views\ManagerJob\EditJob.cshtml" />
-    <Content Include="Views\Personnel\AddPersonnel.cshtml" />
-    <Content Include="Views\Personnel\EditPersonnel.cshtml" />
-    <Content Include="Views\Personnel\Index.cshtml" />
-    <Content Include="Views\Admin\Index.cshtml" />
-    <Content Include="Views\Company\Index.cshtml" />
-    <Content Include="Views\Company\AddCompany.cshtml" />
-    <Content Include="Views\Company\EditCompany.cshtml" />
+    <Content Include="Areas\Admin\Views\Personnel\AddPersonnel.cshtml" />
+    <Content Include="Areas\Admin\Views\Personnel\EditPersonnel.cshtml" />
+    <Content Include="Areas\Admin\Views\Personnel\Index.cshtml" />
+    <Content Include="Areas\Admin\Views\Company\Index.cshtml" />
+    <Content Include="Areas\Admin\Views\Company\AddCompany.cshtml" />
+    <Content Include="Areas\Admin\Views\Company\EditCompany.cshtml" />
     <Content Include="Views\Mail\Inbox.cshtml" />
     <Content Include="Views\Mail\GetMailDetails.cshtml" />
     <Content Include="Views\Shared\MessageListMenu.cshtml" />
@@ -546,16 +553,16 @@
     <Content Include="Views\Login\Index.cshtml" />
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\ErrorPages\Page500.cshtml" />
-    <Content Include="Views\Manager\AddManager.cshtml" />
-    <Content Include="Views\Manager\EditManager.cshtml" />
-    <Content Include="Views\Manager\Index.cshtml" />
+    <Content Include="Areas\Admin\Views\Manager\AddManager.cshtml" />
+    <Content Include="Areas\Admin\Views\Manager\EditManager.cshtml" />
+    <Content Include="Areas\Admin\Views\Manager\Index.cshtml" />
     <Content Include="Views\Mail\SearchMail.cshtml" />
     <Content Include="Views\Shared\Notification.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Areas\Admin\Data\" />
     <Folder Include="Models\" />
-    <Folder Include="Views\User\" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
